style.css
:root {
  scrollbar-gutter: stable;
}

body {
  margin: 0 auto;
  padding: 1em;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 2.5em;
  min-height: 100dvh;
  max-width: 600px;

  &>* {
    margin: 0;
  }
}

h1 {
  font-size: 2em;
}

h1 sup {
  font-size: 0.5em;
}

#searchForm,
.emote-wrapper {
  display: grid;
  gap: 0.25em;
  grid-template-columns: 1fr auto;

  label {
    grid-column: span 2;
    margin-block: 0.5em 0;
  }

  input,
  button {
    border: 1px solid color-mix(in srgb, currentColor, transparent);
    border-radius: 0.25em;
  }

  input {
    padding-inline: 1em;
  }

  button {
    aspect-ratio: 1;
    height: 3em;

    position: relative;
    cursor: pointer;

    &[data-clipboard-content]::before {
      content: "📋";
    }

    &[type="reset"]::before {
      content: "✖️";
    }

    &::after {
      content: "";
      position: absolute;
      inset: 0;
      border-radius: inherit;
      display: grid;
      place-items: center;
      background: inherit;
      opacity: 0;
      transition: opacity 200ms;
    }

    &.success::after {
      content: "✔️";
      opacity: 1;
    }
  }
}

#emojicons {
  list-style-type: none;
  padding: 0;

  display: grid;
  gap: 1em;

  &:empty::before {
    content: attr(data-empty-message);
  }
}

footer {
  margin-block-start: auto;
}

.error-anchor {
  position: fixed;
  inset-inline: 0;
  inset-block-end: 0;
  display: grid;
  place-items: center;
  padding: 1em;
  pointer-events: none;

  .wrapper {
    padding: 1em;
    border-radius: 0.5em;

    background-color: hsl(0, 86%, 42%);
    color: white;

    transition: opacity 200ms;
    pointer-events: all;

    &.hidden {
      opacity: 0;
      pointer-events: none;
    }

    button {
      background: none;
      border: none;
      color: inherit;
      cursor: pointer;

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

